--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+       <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -412,11 +412,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="znW-PK-ix6" customClass="CPTGraphHostingView">
-                                <rect key="frame" x="0.0" y="203" width="600" height="348"/>
-                                <animations/>
-                                <color key="backgroundColor" red="1" green="0.96943304109999995" blue="0.71732925299999994" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg7-3r-qfv">
                                 <rect key="frame" x="0.0" y="72" width="600" height="65"/>
                                 <animations/>
@@ -433,19 +428,15 @@
                         <constraints>
                             <constraint firstItem="gg7-3r-qfv" firstAttribute="top" secondItem="VXX-qP-G0y" secondAttribute="bottom" constant="8" id="03t-AZ-8ec"/>
                             <constraint firstItem="8YX-7J-kme" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="08M-Zo-pzn"/>
-                            <constraint firstItem="znW-PK-ix6" firstAttribute="top" secondItem="8YX-7J-kme" secondAttribute="bottom" constant="10" id="6dm-um-Nse"/>
                             <constraint firstItem="by1-WB-oJK" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="Mex-RN-AcH"/>
                             <constraint firstAttribute="trailing" secondItem="by1-WB-oJK" secondAttribute="trailing" id="Mf4-vb-KLi"/>
                             <constraint firstAttribute="trailing" secondItem="8YX-7J-kme" secondAttribute="trailing" id="Nfm-I6-HvB"/>
                             <constraint firstItem="duU-ff-IEK" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="Tis-Yx-bTU"/>
-                            <constraint firstAttribute="trailing" secondItem="znW-PK-ix6" secondAttribute="trailing" id="dfj-2y-k8e"/>
                             <constraint firstItem="duU-ff-IEK" firstAttribute="top" secondItem="8YX-7J-kme" secondAttribute="bottom" constant="8" id="hPZ-Ag-5L4"/>
                             <constraint firstItem="gg7-3r-qfv" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="hkB-C2-5Ju"/>
                             <constraint firstItem="by1-WB-oJK" firstAttribute="top" secondItem="gg7-3r-qfv" secondAttribute="bottom" constant="5" id="pYq-9C-1oJ"/>
                             <constraint firstItem="0Hc-69-qcR" firstAttribute="top" secondItem="duU-ff-IEK" secondAttribute="bottom" constant="2" id="rSl-3f-h9n"/>
                             <constraint firstItem="8YX-7J-kme" firstAttribute="top" secondItem="by1-WB-oJK" secondAttribute="bottom" constant="5" id="sdU-Bn-kKy"/>
-                            <constraint firstItem="0Hc-69-qcR" firstAttribute="top" secondItem="znW-PK-ix6" secondAttribute="bottom" id="t9S-5d-vwE"/>
-                            <constraint firstItem="znW-PK-ix6" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="wAg-rz-iln"/>
                             <constraint firstAttribute="trailing" secondItem="duU-ff-IEK" secondAttribute="trailing" id="yyx-jk-0jZ"/>
                             <constraint firstAttribute="trailing" secondItem="gg7-3r-qfv" secondAttribute="trailing" id="zUt-fX-kDU"/>
                         </constraints>
@@ -454,7 +445,6 @@
                         <outlet property="bezirGraphView" destination="duU-ff-IEK" id="OJj-E3-h72"/>
                         <outlet property="binDetailsTextView" destination="gg7-3r-qfv" id="M0B-w2-Y7d"/>
                         <outlet property="dateRangeLabel" destination="by1-WB-oJK" id="QAi-Em-yqV"/>
-                        <outlet property="graphView" destination="znW-PK-ix6" id="TEf-WR-00G"/>
                         <outlet property="queryLabel" destination="8YX-7J-kme" id="Qo5-LV-R6W"/>
                     </connections>
                 </viewController>
